--- a/.github/actions/ci-pipeline-template/action.yml
+++ b/.github/actions/ci-pipeline-template/action.yml
@@ -24,6 +24,8 @@ runs:
 
     - name: Fetch last merged PR details
       id: fetch_pr_details
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         PR_RESPONSE=$(gh pr list --repo ${{ github.repository }} --state merged --json number --jq '.[0]')
         PR_NUMBER=$(echo $PR_RESPONSE | jq -r '.number')
@@ -33,6 +35,8 @@ runs:
 
     - name: Fetch PR approver email
       id: fetch_approver_email
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         REVIEWERS_RESPONSE=$(gh pr review --repo ${{ github.repository }} $PR_NUMBER --json user,state --jq '.[] | select(.state=="APPROVED") | .user.login')
         
