--- a/.github/actions/ci-pipeline-template/action.yml
+++ b/.github/actions/ci-pipeline-template/action.yml
@@ -41,8 +41,16 @@ runs:
       env:
         GH_TOKEN: ${{ inputs.GH_TOKEN }}
       run: |
-        REVIEWERS_RESPONSE=$(curl -H "Authorization: token $GH_TOKEN" \
-          "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews" | jq -r '.[] | select(.state=="APPROVED") | .user.login')
+        echo "Fetching PR approver email for PR number: $PR_NUMBER"
+
+        # Fetch reviews for the PR
+        REVIEWS=$(curl -H "Authorization: token $GH_TOKEN" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/reviews")
+        
+        echo "Reviews fetched: $REVIEWS"
+
+        # Process reviews to find the approver
+        REVIEWERS_RESPONSE=$(echo "$REVIEWS" | jq -r '.[] | select(.state=="APPROVED") | .user.login')
 
         if [ -z "$REVIEWERS_RESPONSE" ]; then
           APROVADOR_EMAIL="${{ inputs.DEFAULT_APROVADOR_EMAIL }}"
