--- a/.github/actions/ci-pipeline-template/action.yml
+++ b/.github/actions/ci-pipeline-template/action.yml
@@ -76,7 +76,7 @@ runs:
         echo "Labels fetched: $TAGS"
         echo "TAGS=$TAGS" >> $GITHUB_ENV
 
-        - name: Send information to ServiceNow
+    - name: Send information to ServiceNow
       shell: bash
       run: |
         ENDPOINT="https://krotondev.service-now.com/api/kra/release/create"
@@ -114,9 +114,6 @@ runs:
           OUTROS=""
         fi
 
-        # Get the current time in São Paulo timezone
-        SAO_PAULO_TIME=$(TZ="America/Sao_Paulo" date +"%Y-%m-%dT%H:%M:%S")
-
         PAYLOAD=$(cat <<EOF
         {
           "origemCriacao": "GitHub",
@@ -135,8 +132,8 @@ runs:
           "outros": "$OUTROS",
           "titulo": "Build ${{ github.run_id }}",
           "descricao": "Descrição detalhada do build ${{ github.run_id }}",
-          "inicioReal": "$SAO_PAULO_TIME",
-          "terminoReal": "$SAO_PAULO_TIME",
+          "inicioReal": "${{ github.event.workflow_run.created_at }}",
+          "terminoReal": "${{ github.event.workflow_run.created_at }}",
           "fechamento": "Encerrada com sucesso",
           "linkExterno": "$LINK_EXTERNO"
         }
