--- a/.github/actions/ci-pipeline-template/action.yml
+++ b/.github/actions/ci-pipeline-template/action.yml
@@ -24,7 +24,7 @@ runs:
     - name: Set start time
       shell: bash
       run: |
-        START_TIME=$(date +"%Y-%m-%d %H:%M:%S")
+        START_TIME=$(TZ="America/Sao_Paulo" date +"%Y-%m-%d %H:%M:%S")
         echo "START_TIME=$START_TIME" >> $GITHUB_ENV
         echo "Script started at: $START_TIME"
 
